unpackaged/main/default/objects/Case/fields/Resolution_mc__c.field-meta.xml
<CustomField>
    <fullName>Resolution_mc__c</fullName>
    <description>R1814753</description>
    <label>Resolution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administrative</fullName>
            </value>
            <value>
                <fullName>CS Toolbox</fullName>
            </value>
            <value>
                <fullName>Hire</fullName>
            </value>
            <value>
                <fullName>Integration Management</fullName>
            </value>
            <value>
                <fullName>No Hire</fullName>
            </value>
            <value>
                <fullName>Product Feedback</fullName>
            </value>
            <value>
                <fullName>Sent to Sales</fullName>
            </value>
            <value>
                <fullName>Sent to Support</fullName>
            </value>
            <value>
                <fullName>Special Ops</fullName>
            </value>
            <value>
                <fullName>Support Special Ops</fullName>
            </value>
            <value>
                <fullName>System Performance / Bug</fullName>
            </value>
            <value>
                <fullName>Training - General</fullName>
            </value>
            <value>
                <fullName>Training - Usability</fullName>
            </value>
            <value>
                <fullName>Unresponsive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>