unpackaged/main/default/objects/Case/fields/Resolved__c.field-meta.xml
<CustomField>
    <fullName>Resolved__c</fullName>
    <description>R1812440; Updated R1813400</description>
    <label>Resolved</label>
    <type>DateTime</type>
</CustomField>