unpackaged/main/default/objects/Case/fields/Screen_share__c.field-meta.xml
<CustomField>
    <fullName>Screen_share__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created for R1915343</description>
    <label>Screen share</label>
    <type>Checkbox</type>
</CustomField>