unpackaged/main/default/objects/Case/fields/Send_Case_Close_Notification_Survey__c.field-meta.xml
<CustomField>
    <fullName>Send_Case_Close_Notification_Survey__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Send Case Close Notification &amp; Survey</label>
    <type>Checkbox</type>
</CustomField>