unpackaged/main/default/objects/Case/fields/Send_To__c.field-meta.xml
<CustomField>
    <fullName>Send_To__c</fullName>
    <label>Send To</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Followup</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Payment Services</fullName>
            </value>
            <value>
                <fullName>Customer Relations</fullName>
            </value>
            <value>
                <fullName>Customer Retention</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Risk</fullName>
            </value>
            <value>
                <fullName>Retention</fullName>
            </value>
            <value>
                <fullName>Consumer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>