unpackaged/main/default/objects/Case/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>R151393</description>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>open </fullName>
            </value>
            <value>
                <fullName>reversed </fullName>
            </value>
            <value>
                <fullName>closed </fullName>
            </value>
            <value>
                <fullName>pre-arb 1 </fullName>
            </value>
            <value>
                <fullName>pre-arb 2 </fullName>
            </value>
            <value>
                <fullName>second chargeback</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>