unpackaged/main/default/objects/Case/fields/Started__c.field-meta.xml
<CustomField>
    <fullName>Started__c</fullName>
    <description>R1812440; Updated R1813400</description>
    <label>Started</label>
    <type>DateTime</type>
</CustomField>