unpackaged/main/default/objects/Case/fields/Steps_to_Reproduce__c.field-meta.xml
<CustomField>
    <fullName>Steps_to_Reproduce__c</fullName>
    <description>Please enter steps to reproduce issue</description>
    <label>Steps to Reproduce</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>