unpackaged/main/default/objects/Case/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
    <description>Sub Categories used by Soluno. Child of Categories</description>
    <label>Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accounting questions</fullName>
            </value>
            <value>
                <fullName>Adjust Invoice</fullName>
            </value>
            <value>
                <fullName>Balancing</fullName>
            </value>
            <value>
                <fullName>Bank Accounts</fullName>
            </value>
            <value>
                <fullName>Bank Reconciliation</fullName>
            </value>
            <value>
                <fullName>Batch Check Print</fullName>
            </value>
            <value>
                <fullName>Cash Flow</fullName>
            </value>
            <value>
                <fullName>Conflict Search</fullName>
            </value>
            <value>
                <fullName>Contact Management</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Custom Layouts</fullName>
            </value>
            <value>
                <fullName>Deposit Slips</fullName>
            </value>
            <value>
                <fullName>Document Management</fullName>
            </value>
            <value>
                <fullName>Email Configuration</fullName>
            </value>
            <value>
                <fullName>Emailing</fullName>
            </value>
            <value>
                <fullName>Expenses</fullName>
            </value>
            <value>
                <fullName>File</fullName>
            </value>
            <value>
                <fullName>File Groups</fullName>
            </value>
            <value>
                <fullName>File Management</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>General Ledger Accounts</fullName>
            </value>
            <value>
                <fullName>Heat Map</fullName>
            </value>
            <value>
                <fullName>Nacha</fullName>
            </value>
            <value>
                <fullName>Opening balances</fullName>
            </value>
            <value>
                <fullName>Operating In/Out</fullName>
            </value>
            <value>
                <fullName>Past Due Statements</fullName>
            </value>
            <value>
                <fullName>Payables</fullName>
            </value>
            <value>
                <fullName>Practice Management</fullName>
            </value>
            <value>
                <fullName>Quick Entry</fullName>
            </value>
            <value>
                <fullName>Releasing Check</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>