unpackaged/main/default/objects/Case/fields/Total_Users__c.field-meta.xml
<CustomField>
    <fullName>Total_Users__c</fullName>
    <description>R1812240</description>
    <formula>Account.Total_Users__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>