unpackaged/main/default/objects/Case/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Modified FLS for R1916749; Removed lookup filter for R2023584</description>
    <label>Value+</label>
    <referenceTo>ValuePlus__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>