unpackaged/main/default/objects/Case/fields/Waiting_on_CSM__c.field-meta.xml
<CustomField>
    <fullName>Waiting_on_CSM__c</fullName>
    <description>R1812440; Updated R1813400</description>
    <label>Waiting on CSM</label>
    <type>DateTime</type>
</CustomField>