unpackaged/main/default/objects/Case/fields/Website__c.field-meta.xml
<CustomField>
    <fullName>Website__c</fullName>
    <description>R176835</description>
    <formula>Account.Website</formula>
    <label>Website</label>
    <type>Text</type>
</CustomField>