unpackaged/main/default/objects/Case/fields/Z_Acct_Number__c.field-meta.xml
<CustomField>
    <fullName>Z_Acct_Number__c</fullName>
    <formula>Account.Z_Acct_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Z Acct Number</label>
    <type>Text</type>
</CustomField>