unpackaged/main/default/objects/Case/fields/Zoho_Ticket_Number__c.field-meta.xml
<CustomField>
    <fullName>Zoho_Ticket_Number__c</fullName>
    <label>Zoho Ticket Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>