unpackaged/main/default/objects/Case/fields/Zuora_Bill_Cycle_Day__c.field-meta.xml
<CustomField>
    <fullName>Zuora_Bill_Cycle_Day__c</fullName>
    <description>R177846</description>
    <formula>Account.Zuora_Bill_Cycle_Day__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zuora Bill Cycle Day</label>
    <type>Text</type>
</CustomField>