unpackaged/main/default/objects/Case/recordTypes/Billing_MyCase.recordType-meta.xml
<RecordType>
    <fullName>Billing_MyCase</fullName>
    <active>true</active>
    <businessProcess>Billing</businessProcess>
    <label>Billing - MyCase</label>
</RecordType>