unpackaged/main/default/objects/Case/recordTypes/LawPay.recordType-meta.xml
<RecordType>
    <fullName>LawPay</fullName>
    <active>true</active>
    <businessProcess>MyCase Support</businessProcess>
    <label>LawPay</label>
</RecordType>