unpackaged/main/default/objects/Case/recordTypes/MyCase.recordType-meta.xml
<RecordType>
    <fullName>MyCase</fullName>
    <active>true</active>
    <businessProcess>MyCase</businessProcess>
    <label>MyCase</label>
</RecordType>