unpackaged/main/default/objects/Case/recordTypes/MyCase_Accounting.recordType-meta.xml
<RecordType>
    <fullName>MyCase_Accounting</fullName>
    <active>true</active>
    <businessProcess>MyCase Support</businessProcess>
    <label>MyCase Accounting</label>
</RecordType>