unpackaged/main/default/objects/Case/recordTypes/MyCase_Support.recordType-meta.xml
<RecordType>
    <fullName>MyCase_Support</fullName>
    <active>true</active>
    <businessProcess>MyCase Support</businessProcess>
    <label>MyCase Support</label>
</RecordType>