unpackaged/main/default/objects/Case/recordTypes/MyCase_Websites.recordType-meta.xml
<RecordType>
    <fullName>MyCase_Websites</fullName>
    <active>true</active>
    <businessProcess>MyCase Websites</businessProcess>
    <description>R176835</description>
    <label>MyCase Websites</label>
</RecordType>