unpackaged/main/default/objects/Case/recordTypes/Partner.recordType-meta.xml
<RecordType>
    <fullName>Partner</fullName>
    <active>true</active>
    <businessProcess>MyCase</businessProcess>
    <label>Partner</label>
</RecordType>