unpackaged/main/default/objects/Case/recordTypes/Payment_Services.recordType-meta.xml
<RecordType>
    <fullName>Payment_Services</fullName>
    <active>true</active>
    <businessProcess>Property Management</businessProcess>
    <label>Payment Services</label>
</RecordType>