unpackaged/main/default/objects/Case/recordTypes/Professional_Services.recordType-meta.xml
<RecordType>
    <fullName>Professional_Services</fullName>
    <active>true</active>
    <businessProcess>MyCase Websites</businessProcess>
    <label>Professional Services</label>
</RecordType>