unpackaged/main/default/objects/Case/recordTypes/Risk.recordType-meta.xml
<RecordType>
    <fullName>Risk</fullName>
    <active>true</active>
    <businessProcess>Risk</businessProcess>
    <description>Case Record Type to track risky behavior</description>
    <label>Risk</label>
</RecordType>