unpackaged/main/default/objects/Case/recordTypes/Soluno_Support_Case.recordType-meta.xml
<RecordType>
    <fullName>Soluno_Support_Case</fullName>
    <active>true</active>
    <businessProcess>Soluno - Support Process</businessProcess>
    <description>Support Case used by Soluno</description>
    <label>Soluno - Support Case</label>
</RecordType>