unpackaged/main/default/objects/Case/validationRules/Case_Escalation_Status_Delegated.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_Escalation_Status_Delegated</fullName>
    <active>true</active>
    <description>Only users with an Engineering profile can change the Escalation Status to &#39;Delegated&#39;</description>
    <errorConditionFormula>ISCHANGED(Escalation_Status__c)&amp;&amp; 
ISPICKVAL(Escalation_Status__c, &#39;Delegated&#39;) &amp;&amp; 
RecordTypeId = &#39;0128W000001DllNQAS&#39;||
RecordTypeId = &#39;0128W000001DllMQAS&#39;&amp;&amp;
($User.ProfileId != &#39;2F00e8W0000022jhR&#39;&amp;&amp;
$User.ProfileId != &#39;2F00e8W000000bRIb&#39;)</errorConditionFormula>
    <errorDisplayField>Escalation_Status__c</errorDisplayField>
    <errorMessage>Your role cannot change Escalation Status to &#39;Delegated&#39; value</errorMessage>
</ValidationRule>