unpackaged/main/default/objects/Case/validationRules/no_website_case_with_payments_reason.validationRule-meta.xml
<ValidationRule>
    <fullName>no_website_case_with_payments_reason</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Reason, &#39;Other Payments Reason&#39; ),
ISPICKVAL( Product__c , &#39;MyCase Websites&#39;))</errorConditionFormula>
    <errorDisplayField>Product__c</errorDisplayField>
    <errorMessage>Case Reason cannot be &#39;Other Payments Reason&#39; when Product is &#39;MyCase Websites&#39;.</errorMessage>
</ValidationRule>