unpackaged/main/default/objects/Case/listViews/Copy_of_MyCase_Websites.listView-meta.xml
<ListView>
    <fullName>Copy_of_MyCase_Websites</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed,Closed - Retained,Closed - Churned</value>
    </filters>
    <filters>
        <field>CASES.SUBJECT</field>
        <operation>notEqual</operation>
        <value>SSL Certificate Successfully Installed</value>
    </filters>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.MyCase_Websites</value>
    </filters>
    <label>Copy of MyCase Websites</label>
    <sharedTo>
        <role>System_Admins</role>
    </sharedTo>
</ListView>