unpackaged/main/default/objects/Case/listViews/LawPay_Customer_Feedback_Case.listView-meta.xml
<ListView>
    <fullName>LawPay_Customer_Feedback_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>LawPay Customer Feedback</label>
    <queue>LawPay_Customer_Feedback</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>