unpackaged/main/default/objects/Case/listViews/MyCase_Billing_Case.listView-meta.xml
<ListView>
    <fullName>MyCase_Billing_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>New,In Progress,Re-Opened,Ready for Processing,On Hold</value>
    </filters>
    <label>MyCase Billing</label>
    <queue>MyCase_Billing</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>