unpackaged/main/default/objects/Case/listViews/MyCase_Customer_Feedback_Case.listView-meta.xml
<ListView>
    <fullName>MyCase_Customer_Feedback_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>MyCase Customer Feedback</label>
    <queue>MyCase_Customer_Feedback</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>