unpackaged/main/default/objects/Case/listViews/MyCase_Payments_Case.listView-meta.xml
<ListView>
    <fullName>MyCase_Payments_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>MyCase Payments</label>
    <queue>MyCase_Payments</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>